# Agentic-Ai

./: .gitignore  README.md  apps.py  main.py  pyproject.toml  rag_backend.py  requirements.txt
Agentic/: agent.py  agent_loop.py  api.py  main.py  tools.py
updatedgenerativeai/: 1-langchainintro.ipynb  2-tools.ipynb  3-agentintro.ipynb  4-agentmultipletool.ipynb  rag-pipline.ipynb  rag-sys-practice.ipynb  rag-system-pipeline.ipynb
updatedgenerativeai/multi-source-rag-ai-assistant/: app.py  multi-source-rag-ai-assistant.ipynb  multi-source-rag-ai.ipynb  streamlit-rag.py
updatedgenerativeai/text_files/: python.txt
